improve the template

--- a/diandou/templates/layout.html
+++ b/diandou/templates/layout.html
@@ -28,9 +28,15 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
-
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+	<div class="container">
+	  <div class="brand">点豆电影</div>
+	</div>
+      </div>
+    </div>
   </header>
-  <div class="container">
+  <div class="container" style="margin-top: 60px">
     {% block content %}{% endblock %}
   </div>
   <footer>
