--- a/diandou/templates/movie_list.html
+++ b/diandou/templates/movie_list.html
@@ -1,31 +1,26 @@
 {% extends 'layout.html' %}
 {% block content %}
-<div class="row">
+<div id="moive_list" class="span8">
   {% for movie in movie_list %}
-  <div class="span12 well row">
-    <div class="span12">
-    <h3>{{ movie.title }}</h3>
-    </div>
-    <div class="span3">
-    <a href="#" class="thumbnail">
-      <img src="{{ movie.image }}" alt="the post of {{ movie.title }}" />
-    </a>
-    </div>
-    <div class="span4">
-    <ul>caster
-      {% for caster in movie.cast_list %}
-      <li>{{ caster }}</li>
-      {% endfor %}
-    </ul>
-    </div>
-    <div class="span4">
-    <ul>director
-      {% for director in movie.director_list %}
-      <li>{{ director }}</li>
-      {% endfor %}
-    </ul>
-    </div>
-  </div>
+  <table width="100%">
+    <tbody>
+      <tr>
+	<td class="span2">
+	  <img src="{{ movie.image }}" alt="{{ movie.image }}" />
+	</td>
+	<td>
+	  <p><a href="/movie/{{ movie.douban_id }}">{{ movie.title }}</a></p>
+	  <p>
+	    {{ movie.year }} /
+	    {{ movie.aka }} /
+	    {{ movie.cast }} /
+	    {{ movie.director }}
+	  </p>
+	</td>
+	</tr>
+      </tbody>
+    </table>
+  <hr />
   {% else %}
   <h2>No movie found.</h2>
   {% endfor %}
