--- a/diandou/templates/login.html
+++ b/diandou/templates/login.html
@@ -3,14 +3,14 @@
 <div class="span12">  <form action="/login" method="post">
     <p>
       <label>Username</label>
-      <input type="text" name="username" />
+      <input type="text" name="username" autofocus>
     </p>
     <p>
       <label>Password</label>
-      <input type="password" name="password" />
+      <input type="password" name="password">
     </p>
     <p>
-      <input type="submit" value="Login" />
+      <input type="submit" value="Login">
     </p>
   </form>
 </div>
