--- a/diandou/templates/layout.html
+++ b/diandou/templates/layout.html
@@ -50,9 +50,9 @@
 <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='js/jquery-1.6.4.min.js') }}"><\/script>')</script>
 
 <!-- scripts concatenated and minified via build script -->
-<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+<!-- script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script-->
 <!-- end scripts -->
-
+{% block javascripts %}{% endblock %}
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
     mathiasbynens.be/notes/async-analytics-snippet -->
 <script>/*
