--- a/diandou/templates/movie_list.html
+++ b/diandou/templates/movie_list.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 <div id="moive_list" class="span12">
-    {% for movie in movie_list %}
+    {% for movie in movies %}
     <table width="100%" class="table">
         <tbody>
             <tr>
