--- a/diandou/templates/movie_details.html
+++ b/diandou/templates/movie_details.html
@@ -3,7 +3,7 @@
 <div class="span12 row">
     <h1>{{ movie.title }} ({{ movie.year }})</h1>
     <div class="span2">
-        <img src="{{ movie.image }}" />
+        <img src="{{ movie.image|replace('spic', 'lpic') }}" />
     </div>
     <div class="span9">
         <span>导演</span>: <span>{{ movie.director }}</span><br />
